# esp

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main copy.txt
main/include/: ble.h  ble_nimble.h  common.h  gps.h  led.h  monitoring.h  trigger.h
main/src/: ble.c  ble_nimble.c  gps.c  gps_original.c  led.c  main.c  monitoring.c  trigger.c
